--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "entitiesjs",
   "version": "5.0.1",
   "description": "EntitiesJs - it's a framework for work with data",
-  "main": "./dist/index.js",
+  "main": "./index.js",
   "module": "index.js",
   "files": [
-    "dist"
+    "./"
   ],
   "scripts": {
     "prepublishOnly": "webpack --mode=production",
